# anime-telegram-bot

./: .pre-commit-config.yaml  README.md  pyproject.toml
source/: main.py  test-bot.py  test.py  test_route.py
source/core/: __init__.py  aiogram_client.py  client.py
source/core/aiogram_wrapper/: __init__.py  client.py  command.py  extensions.py  message_parsers.py
source/core/database/: client.py
source/core/parsers/: __init__.py  models.py  parser.py
source/core/tasks/: tasks.py
source/database/: abc.py  client.py  tables.py  variables.py
source/extensions/: anime.py  base.py  manobe.py
source/utils/: responses.py  text_processing.py  utils.py  webdriver_utils.py
